--- a/solutions/community-management.html
+++ b/solutions/community-management.html
@@ -531,7 +531,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-12">
-                     <h2 class="section-heading">Product Benifits</h2>
+                     <h2 class="section-heading">Product Benefits</h2>
                   </div>
                </div>
 
@@ -584,7 +584,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-12">
-                     <h2 class="section-heading">How to get started</h2>
+                     <h2 class="section-heading">How to Get Started</h2>
                   </div>
 
                   <div class="col-12 d-none d-md-block">
